<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filters_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/header_filters" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/filterDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_of_issue"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/yearEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/yearEnd"
            tools:text="Year of issue: " />

        <EditText
            android:id="@+id/yearEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:hint="@string/to"
            android:inputType="numberDecimal"
            android:minWidth="70dp"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/yearStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:hint="@string/from"
            android:inputType="numberDecimal"
            android:minWidth="70dp"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toStartOf="@+id/yearEnd"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/filterImbd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/raiting_imbd"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/ImbdEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yearEnd"
            tools:text="Raiting Imbd: " />

        <EditText
            android:id="@+id/ImbdEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:hint="@string/to"
            android:inputType="numberDecimal"
            android:minWidth="70dp"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yearEnd" />

        <EditText
            android:id="@+id/ImbdStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:hint="@string/from"
            android:inputType="numberDecimal"
            android:minWidth="70dp"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toStartOf="@+id/ImbdEnd"
            app:layout_constraintTop_toBottomOf="@+id/yearEnd" />

        <TextView
            android:id="@+id/filterKinopoisk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/raiting_kinopoisk"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ImbdEnd"
            tools:text="Raiting Kinopoisk: " />

        <EditText
            android:id="@+id/kinopoiskEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:hint="@string/to"
            android:inputType="numberDecimal"
            android:minWidth="70dp"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ImbdEnd" />

        <EditText
            android:id="@+id/kinopoiskStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:hint="@string/from"
            android:inputType="numberDecimal"
            android:minWidth="70dp"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toStartOf="@+id/kinopoiskEnd"
            app:layout_constraintTop_toBottomOf="@+id/ImbdEnd" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apply" />

    </LinearLayout>

</LinearLayout>

