<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:weightSum="2">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/movie_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fieldEmailLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fieldEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColorHint="#616161" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fieldPasswordLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginTop="16dp"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fieldEmailLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fieldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/emailSignInButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sign_in"
            android:textSize="20sp"
            android:padding="8dp"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fieldPasswordLayout" />

        <Button
            android:id="@+id/emailCreateAccountButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailSignInButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
